# SpEd-Packet-Studio

./: .gitignore  BUILD-WINDOWS-RELEASE.cmd  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.VSCodeCounter/2026-06-26_14-32-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/: cove-page-icons.ai  service-icons.ai
backend/: __init__.py  __main__.py  config.py  main.py  native_runtime.py  paths.py  requirements.txt
backend/api/: __init__.py  router.py
backend/database/: base.py  initialize.py  session.py
backend/generators/: __init__.py  pdf.py
backend/models/: __init__.py  domain.py  mixins.py
backend/schemas/: __init__.py  projects.py  system.py
backend/services/: __init__.py  autosave.py  projects.py
backend/tests/: __init__.py  test_paths.py  test_projects.py
packaging/windows/: AppxManifest.xml.template  msix.env.example
scripts/: build-msix.ps1  build-sidecar.ps1  build-windows-release.ps1  dev.mjs  generate-test-font.py  prepare-weasyprint-native.ps1  sync-version.ps1  verify-windows-package.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useAutosave.ts  useSystemHealth.ts
src/layouts/: AppShell.tsx
src/lib/: validation.ts
src/navigation/: navigation.ts
src/pages/: AtAGlancePage.tsx  DashboardPage.tsx  DataSheetBuilderPage.tsx  FoundationPage.tsx  (+5 more)
themes/: README.md
(+29 files in other folders)
