[package]
name = "sped-packet-studio"
version = "1.0.1"
description = "Local-first special education packet publishing studio"
authors = ["SpEd Packet Studio"]
edition = "2021"

[lib]
name = "sped_packet_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
